<?xml version="1.0"?>
<package format="3">
  <name>my_beadando_pkg</name>
  <version>0.0.0</version>
  <description>Kis beadandó ROS2 package</description>

  <maintainer email="aj@todo.todo">aj</maintainer>
  <license>Apache-2.0</license>

  <!-- függőségek -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- tesztfüggőségek -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


